feat: use less to display audit log in tty2

--- a/overlay/etc/systemd/system/getty@tty2.service.d/override.conf
+++ b/overlay/etc/systemd/system/getty@tty2.service.d/override.conf
@@ -1,6 +1,6 @@
 [Service]
 ExecStart=
-ExecStart=-/bin/sh -c "sleep 10s && tail -fn 1000 /tmp/wyper/alog"
+ExecStart=-/bin/sh -c "less +F /tmp/wyper/alog || sleep 2s"
 StandardInput=tty
 StandardOutput=tty
 
